src/test/should_panic/array_map_one_duplicate.rs
pub fn main() {
    macros::array_map!([("k", "v"), ("k", "v")])
}
